--- a/distSortTemp.html
+++ b/distSortTemp.html
@@ -193,7 +193,7 @@
     </div>
     <div id="map" class="map"></div>
     <script>
-      mapboxgl.accessToken = 'pk.eyJ1IjoiZXhhbXBsZXMiLCJhIjoiY2p0MG01MXRqMW45cjQzb2R6b2ptc3J4MSJ9.zA2W0IkI0c6KaAhJfk9bWg';
+      mapboxgl.accessToken = 'pk.eyJ1IjoibWlsYWJvIiwiYSI6ImNsbnFjbG9xZTB0MmIya3B0eDFwNDEwY3gifQ.9SzpYF3dZCwahgWShbsRiQ';
 
       /**
        * Add the map to the page
