--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     async function geojsonFetch() { 
 
-        let response = await fetch('Master_DS.geojson');
+        let response = await fetch('assets/Master_DS.geojson');
         let Master_DS = await response.json();
 
         //adds choropleth layer using SNAP data
