--- a/section3.html
+++ b/section3.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>Sorting Distance</title>
 
     <!-- Including the main.css file for styling -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/template.css">
 
     <!-- Including the Font Awesome CSS library for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Including the main.js file for JavaScript functionality -->
-    <script src="js/main.js"></script>
+    <script src="js/template.js"></script>
 
 </body>
 
