--- a/webComponent/index.html
+++ b/webComponent/index.html
@@ -2,32 +2,28 @@
 <html>
 
 <head>
-    <title>GEOG 328 LAB 02 EXAMPLE</title>
+    <title>Food Access in Washington State</title>
 
-    <!-- Including the main.css file for styling -->
+    <!-- CSS -->
     <link rel="stylesheet" href="css/template.css">
 
-    <!-- Including the Font Awesome CSS library for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
     <!-- Navigation bar -->
     <div class="topnav" id="myTopnav">
-        <!-- Active link pointing to the index.html page -->
-        <a class="active" href="index.html">Abstract</a>
+        <a class="active" href="index.html">Overview</a>
+        <a href="section1.html">Map 1</a>
+        <a href="section2.html">Map 2</a>
+        <a href="section3.html">Analysis</a>
 
-        <!-- Links to other sections -->
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
-        <a href="section3.html">Section 3</a>
-
-        <!-- Additional links -->
         <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
 
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
         </a>
@@ -35,22 +31,88 @@
 
     <!-- Page content -->
     <div class="content">
-        <!-- Abstract section -->
-        This is the abstract section.
-        <br>
-        <br>
-        <!-- Displaying the course cover image in a scaled size -->
-        Here is the course cover image in a scaled size:
-        <br>
-        <img src="img/cover.jpg" style="width: 100%; height: auto;">
-        <br>
-        <br>
-        <!-- Displaying the course cover image in its original size -->
-        Here is the course cover image in its original size:
-        <img src="img/cover.jpg">
+        <h1>Food Access in Washington State</h1>
+
+        <!-- 你自己的图片：把 img/food_access_overview.png 换成你的文件名 -->
+        <img src="assets/food_access.png"
+             alt="Overview map of food access in Washington State"
+             style="width: 100%; height: auto; margin-bottom: 1.5rem;">
+
+        <p>
+            Our project is an interactive tool that helps people get a better idea on what food access in our state
+            looks like. Food deserts are an important concept to understand equality issues, but one that isn't yet
+            widely known, especially by the people who might be affected by it. In Washington, food deserts are
+            concentrated in low-income urban and rural areas, such as parts of South Seattle, Yakima, and Spokane.
+            They are areas where residents have limited access to affordable, nutritious food, which has a direct
+            negative impact on their health and quality of life. These disparities are often linked to transportation
+            barriers, systemic inequities, and a lack of nearby grocery stores or fresh-produce markets. Our target
+            audience is Washington residents that don't know much about this concept or people that are curious about
+            what patterns within this theme exist close to them.
+        </p>
+
+        <p>
+            This website has two maps that come together to illustrate the supply limitations (distance to grocery
+            stores) and an example of a solution to this barrier (SNAP benefits). Users are able to look up an address
+            or selected point's distance to the nearest grocery store on the first map, and then use their finds to
+            analyze the number households enrolled on SNAP benefits in each county. Hopefully, this will raise
+            awareness that this lack of access isn't a coincidence – there are spatial motifs that can be addressed.
+        </p>
+
+        <p>
+            The SNAP benefits map is a choropleth map that visualizes the household participation in the
+            Supplementantal Nutrition Assistance Program (SNAP) using county level data from the U.S Census Bureau.
+            Each county is shaded based on the number of households recivng SNAP benifits. When hovering over a county,
+            users are able to see the exact number of households enrolled in SNAP for that area. Clicking on a specific
+            county reveals additional stats by showing food access data including the percentage of the county's
+            population living more than 0.5 miles, 1 mile, 10 miles, and 20 miles of a food source, helping users
+            understand how SNAP participation and food accessibility intersects.
+        </p>
+
+        <p>
+            The distance to grocery stores map
+        </p>
+
+        <h2>Data Sources</h2>
+        <ul>
+            <li>
+                Department of Agriculture's Food Access Research Atlas –
+                <a href="https://catalog.data.gov/dataset/food-access-research-atlas" target="_blank">
+                    Food Access Research Atlas
+                </a>
+            </li>
+            <li>
+                Washington State's 2025 Census –
+                <a href="https://catalog.data.gov/dataset/waofm-april-1-population-by-state-county-and-city-1990-to-present"
+                   target="_blank">
+                    WA OFM April 1 Population
+                </a>
+            </li>
+            <li>
+                United States Census Bureau –
+                <a href="https://data.census.gov/table/ACSST5Y2023.S2201?q=S2201:+Food+Stamps/Supplemental+Nutrition+Assistance+Program+(SNAP)&g=040XX00US53$0500000"
+                   target="_blank">
+                    ACS 5-Year S2201 SNAP
+                </a>
+            </li>
+            <li>
+                ADD GROCERY STORE DATA
+            </li>
+        </ul>
+
+        <h2>AI Disclosure & Technical Details</h2>
+        <p>For transparency, our project also documents technical implementation details, including:</p>
+        <ul>
+            <li>Favicon used in the site</li>
+            <li>The public application URL (not just the repository URL)</li>
+            <li>Screenshots of the interactive maps</li>
+            <li>
+                Applied libraries (e.g., Mapbox GL JS) and web services
+                (e.g., GitHub Pages hosting, basemap providers) in use
+            </li>
+        </ul>
     </div>
 
-    <!-- Including the main.js file for JavaScript functionality -->
+    <!-- JS -->
     <script src="js/template.js"></script>
 
 </body>
