--- a/webComponent/index.html
+++ b/webComponent/index.html
@@ -4,23 +4,22 @@
 <head>
     <title>Food Access in Washington State</title>
 
-    <!-- CSS -->
+
     <link rel="stylesheet" href="css/template.css">
 
-    <!-- Font Awesome -->
+
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
-    <!-- Navigation bar -->
+
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">Overview</a>
         <a href="section1.html">Map 1</a>
         <a href="section2.html">Map 2</a>
         <a href="section3.html">Analysis</a>
-
         <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
 
@@ -29,13 +28,13 @@
         </a>
     </div>
 
-    <!-- Page content -->
+
     <div class="content">
+
         <h1>Food Access in Washington State</h1>
 
-        <!-- 你自己的图片：把 img/food_access_overview.png 换成你的文件名 -->
         <img src="assets/food_access.png"
-             alt="Overview map of food access in Washington State"
+             alt="Food access overview"
              style="width: 100%; height: auto; margin-bottom: 1.5rem;">
 
         <p>
@@ -45,7 +44,7 @@
             concentrated in low-income urban and rural areas, such as parts of South Seattle, Yakima, and Spokane.
             They are areas where residents have limited access to affordable, nutritious food, which has a direct
             negative impact on their health and quality of life. These disparities are often linked to transportation
-            barriers, systemic inequities, and a lack of nearby grocery stores or fresh-produce markets. Our target
+            barriers, systemic inequities, and a lack of nearby grocery stores or fresh produce markets. Our target
             audience is Washington residents that don't know much about this concept or people that are curious about
             what patterns within this theme exist close to them.
         </p>
@@ -53,63 +52,56 @@
         <p>
             This website has two maps that come together to illustrate the supply limitations (distance to grocery
             stores) and an example of a solution to this barrier (SNAP benefits). Users are able to look up an address
-            or selected point's distance to the nearest grocery store on the first map, and then use their finds to
-            analyze the number households enrolled on SNAP benefits in each county. Hopefully, this will raise
+            or selected point's distance to the nearest grocery store on the first map, and then use their findings to
+            analyze the number households enrolled in SNAP benefits in each county. Hopefully, this will raise
             awareness that this lack of access isn't a coincidence – there are spatial motifs that can be addressed.
         </p>
 
         <p>
-            The SNAP benefits map is a choropleth map that visualizes the household participation in the
-            Supplementantal Nutrition Assistance Program (SNAP) using county level data from the U.S Census Bureau.
-            Each county is shaded based on the number of households recivng SNAP benifits. When hovering over a county,
+            The SNAP benefits map is a choropleth map that visualizes the household participation in the Supplemental
+            Nutrition Assistance Program (SNAP) using county-level data from the U.S Census Bureau. Each county is
+            shaded based on the number of households receiving SNAP benefits. When hovering over a county,
             users are able to see the exact number of households enrolled in SNAP for that area. Clicking on a specific
             county reveals additional stats by showing food access data including the percentage of the county's
             population living more than 0.5 miles, 1 mile, 10 miles, and 20 miles of a food source, helping users
-            understand how SNAP participation and food accessibility intersects.
+            understand how SNAP participation and food accessibility intersect.
         </p>
 
         <p>
-            The distance to grocery stores map
+            The distance to grocery stores map...
         </p>
 
         <h2>Data Sources</h2>
         <ul>
             <li>
-                Department of Agriculture's Food Access Research Atlas –
+                USDA Food Access Research Atlas – 
                 <a href="https://catalog.data.gov/dataset/food-access-research-atlas" target="_blank">
-                    Food Access Research Atlas
+                    https://catalog.data.gov/
                 </a>
             </li>
             <li>
-                Washington State's 2025 Census –
+                Washington State 2025 Census – 
                 <a href="https://catalog.data.gov/dataset/waofm-april-1-population-by-state-county-and-city-1990-to-present"
-                   target="_blank">
-                    WA OFM April 1 Population
-                </a>
+                   target="_blank">WA OFM Population</a>
             </li>
             <li>
-                United States Census Bureau –
-                <a href="https://data.census.gov/table/ACSST5Y2023.S2201?q=S2201:+Food+Stamps/Supplemental+Nutrition+Assistance+Program+(SNAP)&g=040XX00US53$0500000"
-                   target="_blank">
-                    ACS 5-Year S2201 SNAP
-                </a>
+                U.S. Census Bureau SNAP Data – 
+                <a href="https://data.census.gov/table/ACSST5Y2023.S2201" target="_blank">ACS 5-Year SNAP</a>
             </li>
             <li>
-                ADD GROCERY STORE DATA
+                Grocery store dataset (TBD)
             </li>
         </ul>
 
         <h2>AI Disclosure & Technical Details</h2>
-        <p>For transparency, our project also documents technical implementation details, including:</p>
         <ul>
             <li>Favicon used in the site</li>
-            <li>The public application URL (not just the repository URL)</li>
-            <li>Screenshots of the interactive maps</li>
-            <li>
-                Applied libraries (e.g., Mapbox GL JS) and web services
-                (e.g., GitHub Pages hosting, basemap providers) in use
-            </li>
+            <li>Public app URL (GitHub Pages)</li>
+            <li>Screenshots of interactive maps</li>
+            <li>Libraries used (Mapbox GL JS, GitHub Pages hosting, etc.)</li>
         </ul>
+
+        <!-- README end -->
     </div>
 
     <!-- JS -->
