--- a/webComponent/index.html
+++ b/webComponent/index.html
@@ -2,55 +2,72 @@
 <html>
 
 <head>
-    <title>GEOG 328 LAB 02 EXAMPLE</title>
+    <title>Food Access in Washington State</title>
 
-    <!-- Including the main.css file for styling -->
+    <!-- Keep Template CSS -->
     <link rel="stylesheet" href="css/template.css">
 
-    <!-- Including the Font Awesome CSS library for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
-    <!-- Navigation bar -->
+    <!-- Navigation (unchanged) -->
     <div class="topnav" id="myTopnav">
-        <!-- Active link pointing to the index.html page -->
-        <a class="active" href="index.html">Abstract</a>
+        <a class="active" href="index.html">Overview</a>
+        <a href="section1.html">Map 1</a>
+        <a href="section2.html">Map 2</a>
+        <a href="section3.html">Analysis</a>
 
-        <!-- Links to other sections -->
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
-        <a href="section3.html">Section 3</a>
-
-        <!-- Additional links -->
         <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
 
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
         </a>
     </div>
 
-    <!-- Page content -->
+    <!-- ⭐ Keep template structure -->
     <div class="content">
-        <!-- Abstract section -->
-        This is the abstract section.
-        <br>
-        <br>
-        <!-- Displaying the course cover image in a scaled size -->
-        Here is the course cover image in a scaled size:
-        <br>
-        <img src="img/cover.jpg" style="width: 100%; height: auto;">
-        <br>
-        <br>
-        <!-- Displaying the course cover image in its original size -->
-        Here is the course cover image in its original size:
-        <img src="img/cover.jpg">
+
+        <!-- ⭐ Replace template title -->
+        <h1>Food Access in Washington State</h1>
+
+        <!-- ⭐ Replace template images with YOUR image -->
+        <img src="img/your_image.png" alt="Food Access Overview" />
+
+        <!-- ⭐ Replace template text with README text -->
+        <p>
+            Our project is an interactive tool that helps people get a better idea on what food access in our state
+            looks like. Food deserts are an important concept to understand equality issues, but one that isn't yet
+            widely known, especially by the people who might be affected by it...
+        </p>
+
+        <p>
+            This website has two maps that come together to illustrate the supply limitations (distance to grocery
+            stores) and an example of a solution (SNAP benefits)...
+        </p>
+
+        <p>
+            The SNAP benefits map is a choropleth map that visualizes...
+        </p>
+
+        <h2>Data Sources</h2>
+        <ul>
+            <li>USDA Food Access Research Atlas</li>
+            <li>Washington State 2025 Census</li>
+            <li>U.S. Census Bureau SNAP Data</li>
+        </ul>
+
+        <h2>AI Disclosure & Technical Notes</h2>
+        <ul>
+            <li>Libraries used</li>
+            <li>Hosting information</li>
+            <li>Screenshots of maps</li>
+        </ul>
     </div>
 
-    <!-- Including the main.js file for JavaScript functionality -->
     <script src="js/template.js"></script>
 
 </body>
