--- a/webComponent/index.html
+++ b/webComponent/index.html
@@ -5,7 +5,8 @@
     <title>Food Access in Washington State</title>
 
     <!-- Keep Template CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../assets/css/template.css">
+
 
 
     <link rel="stylesheet"
