--- a/webComponent/references.html
+++ b/webComponent/references.html
@@ -5,7 +5,7 @@
     <title>Page Title</title>
 
     <!-- Including the main.css file for styling -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/template.css">
 
 
     <!-- Including the Font Awesome CSS library for icons -->
