--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Food Access in Washington State</title>
 
-    <!-- Keep Template CSS -->
-    <link rel="stylesheet" href="../assets/css/template.css">
+    <link rel="stylesheet" href="css/template.css">
 
 
 
@@ -15,7 +14,6 @@
 
 <body>
 
-    <!-- Navigation (unchanged) -->
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">Overview</a>
         <a href="section1.html">Map 1</a>
@@ -30,16 +28,12 @@
         </a>
     </div>
 
-    <!-- ⭐ Keep template structure -->
     <div class="content">
 
-        <!-- ⭐ Replace template title -->
         <h1>Food Access in Washington State</h1>
 
-        <!-- ⭐ Replace template images with YOUR image -->
-        <img src="img/your_image.png" alt="Food Access Overview" />
+        <img src="img/foodAccess.png" alt="Food Access Overview" />
 
-        <!-- ⭐ Replace template text with README text -->
         <p>
             Our project is an interactive tool that helps people get a better idea on what food access in our state
             looks like. Food deserts are an important concept to understand equality issues, but one that isn't yet
