--- a/index.html
+++ b/index.html
@@ -32,36 +32,45 @@
 
         <h1>Food Access in Washington State</h1>
 
-        <img src="img/foodAccess.png" alt="Food Access Overview" />
+        <img src="img/foodAccess.jpg" alt="Food Access Overview" style="max-width: 60%; height: auto;" />
 
         <p>
             Our project is an interactive tool that helps people get a better idea on what food access in our state
             looks like. Food deserts are an important concept to understand equality issues, but one that isn't yet
-            widely known, especially by the people who might be affected by it...
+            widely known, especially by the people who might be affected by it. In Washington, food deserts are concentrated
+             in low-income urban and rural areas, such as parts of South Seattle, Yakima, and Spokane. They are areas where 
+             residents have limited access to affordable, nutritious food, which has a direct negative impact on their health
+              and quality of life. These disparities are often linked to transportation barriers, systemic inequities, and a 
+              lack of nearby grocery stores or fresh-produce markets. Our target audience is Washington residents that don't
+               know much about this concept or people that are curious about what patterns within this theme exist close to them.
         </p>
 
         <p>
             This website has two maps that come together to illustrate the supply limitations (distance to grocery
-            stores) and an example of a solution (SNAP benefits)...
+            stores) and an example of a solution (SNAP benefits). Users are able to look up an address or selected 
+            point's distance to the nearest grocery store on the first map, and then use their finds to analyze the 
+            number households enrolled on SNAP benefits in each county. Hopefully, this will raise awareness that this
+             lack of access isn't a coincidence – there are spatial motifs that can be addressed.
         </p>
 
         <p>
-            The SNAP benefits map is a choropleth map that visualizes...
+            The SNAP benefits map is a choropleth map that visualizes the household participation in the Supplementantal
+            Nutrition Assistance Program (SNAP) using county level data from the U.S Census Bureau. Each county is shaded
+            based on the number of households recivng SNAP benifits. When hovering over a county, users are able to see 
+            the exact number of households enrolled in SNAP for that area. Clicking on a specific county reveals additional
+            stats by showing food access data including the percentage of the county's population living more than 0.5 miles,
+            1 mile, 10 miles, and 20 miles of a food source, helping users understand how SNAP participation and 
+            food accessibility intersects.
         </p>
 
-        <h2>Data Sources</h2>
+        <p>Our data was retrieved from:</p>
         <ul>
             <li>USDA Food Access Research Atlas</li>
             <li>Washington State 2025 Census</li>
             <li>U.S. Census Bureau SNAP Data</li>
         </ul>
 
-        <h2>AI Disclosure & Technical Notes</h2>
-        <ul>
-            <li>Libraries used</li>
-            <li>Hosting information</li>
-            <li>Screenshots of maps</li>
-        </ul>
+
     </div>
 
     <script src="js/template.js"></script>
