--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">Overview</a>
-        <a href="section1.html">Map 1</a>
-        <a href="section2.html">Map 2</a>
+        <a href="section1.html">SNAP Benefits Map</a>
+        <a href="section2.html">Closest Geocery Map</a>
         <a href="section3.html">Analysis</a>
 
         <a href="see_also.html">See Also</a>
