--- a/section1.html
+++ b/section1.html
@@ -2,31 +2,44 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>SNAP Benefits Map</title>
 
-    <!-- Including the main.css file for styling -->
+    <!-- Keep your template CSS -->
     <link rel="stylesheet" href="css/template.css">
 
-    <!-- Including the Font Awesome CSS library for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Mapbox (needed for the inserted snapMap map) -->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
+
+    <style>
+        /* Make embed container follow page layout */
+        .map-container {
+            width: 100%;
+            height: 600px; /* adjust height as you need */
+            margin-top: 20px;
+            border: 1px solid #ccc;
+        }
+
+        /* Description part */
+        .description-box {
+            margin-top: 20px;
+            font-size: 16px;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 
 <body>
 
     <!-- Navigation bar -->
     <div class="topnav" id="myTopnav">
-        <!-- Links to different sections -->
-        <a href="index.html">Abstract</a>
-
-        <!-- Active link pointing to the section1.html page -->
-        <a class="active" href="section1.html">Section 1</a>
-
-        <a href="section2.html">Section 2</a>
-        <a href="section3.html">Section 3</a>
+        <a href="index.html">Overview</a>
+        <a class="active" href="section1.html">SNAP Benefits Map</a>
+        <a href="section2.html">Closest Grocery Map</a>
+        <a href="section3.html">Analysis</a>
         <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
 
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
         </a>
@@ -34,13 +47,22 @@
 
     <!-- Page content -->
     <div class="content">
-        <!-- Section 1 content -->
-        This is section 1.
+
+        <h2>SNAP Benefits Map</h2>
+
+        <!-- Map from snapMap.html is embedded here -->
+        <iframe src="snapMap.html" class="map-container"></iframe>
+
+        <!-- Description placeholder -->
+        <div class="description-box">
+            description description description description description description
+            description description description description description description
+            description description description description description description
+        </div>
+
     </div>
 
-    <!-- Including the main.js file for JavaScript functionality -->
     <script src="js/template.js"></script>
 
 </body>
-
 </html>
