--- a/section2.html
+++ b/section2.html
@@ -16,14 +16,13 @@
     <!-- Navigation bar -->
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
-        <a href="index.html">Abstract</a>
-        <a href="section1.html">Section 1</a>
+        <a href="index.html">Overview</a>
+        <a href="section1.html">SNAP Benifits Map</a>
 
         <!-- Active link pointing to the section2.html page -->
-        <a class="active" href="section2.html">Section 2</a>
+        <a class="active" href="section2.html">Closest Grocery Map</a>
 
-        <a href="section3.html">Section 3</a>
-        <a href="see_also.html">See Also</a>
+        <a href="section3.html">Analysis</a>
         <a href="references.html">References</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -35,8 +34,19 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 2 content -->
-        This is section 2.
+
+        <h2>Find the Closet Geocery Store</h2>
+
+        Here should be a grocery store interactive map
     </div>
+
+            <!-- Description placeholder -->
+        <div class="description-box">
+            desscription for closest grocery store map: 
+            description description description description description description
+            description description description description description description
+            description description description description description description
+        </div>
 
     <!-- Including the main.js file for JavaScript functionality -->
     <script src="js/template.js"></script>
