--- a/section3.html
+++ b/section3.html
@@ -16,14 +16,13 @@
     <!-- Navigation bar -->
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
-        <a href="index.html">Abstract</a>
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
+        <a href="index.html">Overview</a>
+        <a href="section1.html">SNAP Benefits Map</a>
+        <a href="section2.html">Closest Geocery Map</a>
 
         <!-- Active link pointing to the section3.html page -->
-        <a class="active" href="section3.html">Section 3</a>
+        <a class="active" href="section3.html">Analysis</a>
 
-        <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -35,7 +34,8 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 3 content -->
-        This is section 3.
+        please write the analysis of the previous two maps here, and say if WA have good food accessibility or not.
+        just conclude the project here 
     </div>
 
     <!-- Including the main.js file for JavaScript functionality -->
