--- a/references.html
+++ b/references.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>References</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/template.css">
 
-
-    <!-- Including the Font Awesome CSS library for icons -->
+    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -16,17 +15,12 @@
 
     <!-- Navigation bar -->
     <div class="topnav" id="myTopnav">
-        <!-- Links to different sections -->
-        <a href="index.html">Abstract</a>
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
-        <a href="section3.html">Section 3</a>
-        <a href="see_also.html">See Also</a>
-
-        <!-- Active link pointing to the references.html page -->
+        <a href="index.html">Overview</a>
+        <a href="section1.html">SNAP Benefits Map</a>
+        <a href="section2.html">Closest Geocery Map</a>
+        <a href="section3.html">Analysis</a>
         <a class="active" href="references.html">References</a>
 
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
         </a>
@@ -34,11 +28,43 @@
 
     <!-- Page content -->
     <div class="content">
-        <!-- Reference section -->
-        This is the reference section.
+        <h2>References</h2>
+
+        <ul>
+            <li>
+                U.S. Department of Agriculture. (n.d.). 
+                <em>Food Access Research Atlas</em>.  
+                Retrieved from  
+                <a href="https://catalog.data.gov/dataset/food-access-research-atlas" target="_blank">
+                    https://catalog.data.gov/dataset/food-access-research-atlas
+                </a>
+            </li>
+
+            <li>
+                Washington State Office of Financial Management. (2025).  
+                <em>Washington State April 1 Population by State, County, and City (1990 to Present)</em>.  
+                Retrieved from  
+                <a href="https://catalog.data.gov/dataset/waofm-april-1-population-by-state-county-and-city-1990-to-present" target="_blank">
+                    https://catalog.data.gov/dataset/waofm-april-1-population-by-state-county-and-city-1990-to-present
+                </a>
+            </li>
+
+            <li>
+                U.S. Census Bureau. (2023).  
+                <em>ACS S2201: Food Stamps / Supplemental Nutrition Assistance Program (SNAP)</em>.  
+                Retrieved from  
+                <a href="https://data.census.gov/table/ACSST5Y2023.S2201?q=S2201:+Food+Stamps/Supplemental+Nutrition+Assistance+Program+(SNAP)&g=040XX00US53$0500000" target="_blank">
+                    https://data.census.gov/table/ACSST5Y2023.S2201
+                </a>
+            </li>
+
+            <li>
+                ADD GROCERY STORE DATA
+            </li>
+        </ul>
+
     </div>
 
-    <!-- Including the main.js file for JavaScript functionality -->
     <script src="js/template.js"></script>
 
 </body>
