--- a/section2.html
+++ b/section2.html
@@ -17,7 +17,7 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Overview</a>
-        <a href="section1.html">SNAP Benifits Map</a>
+        <a href="section1.html">SNAP Benefits Map</a>
 
         <!-- Active link pointing to the section2.html page -->
         <a class="active" href="section2.html">Closest Grocery Map</a>
