--- a/section2.html
+++ b/section2.html
@@ -17,12 +17,12 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Overview</a>
-        <a href="section1.html">SNAP Benefits Map</a>
+        <a class="active" a href="section2.html">Closest Grocery Map</a>
 
         <!-- Active link pointing to the section2.html page -->
-        <a class="active" href="section2.html">Closest Grocery Map</a>
+        <a href="section1.html">SNAP Benefits Map</a>
 
-        <a href="section3.html">Analysis</a>
+        <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -35,7 +35,7 @@
     <div class="content">
         <!-- Section 2 content -->
 
-        <h2>Find the Closet Geocery Store</h2>
+        <h2>Closet Geocery Store</h2>
 
         Here should be a grocery store interactive map
     </div>
