--- a/section1.html
+++ b/section1.html
@@ -35,7 +35,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Overview</a>
         <a href="section2.html">Closest Grocery Map</a>
-        <a class="active" a href="section1.html">SNAP Benefits</a>
+        <a class="active" a href="section1.html">SNAP Benefits Map</a>
         <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
 
