--- a/section3.html
+++ b/section3.html
@@ -17,7 +17,7 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Overview</a>
-        <a href="section2.html">Closest Geocery Map</a>
+        <a href="section2.html">Closest Grocery Map</a>
         <a href="section1.html">SNAP Benefits Map</a>
 
         <!-- Active link pointing to the section3.html page -->
