--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">Overview</a>
-        <a href="section2.html">Closest Geocery Map</a>
+        <a href="section2.html">Closest Grocery Map</a>
         <a href="section1.html">SNAP Benefits Map</a>
         <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
