--- a/section3.html
+++ b/section3.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sorting Distance</title>
+    <title>Analysis</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/template.css">
@@ -34,8 +34,15 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 3 content -->
-        please write the analysis of the previous two maps here, and say if WA have good food accessibility or not.
-        just conclude the project here 
+        <h1>Analysis of Food Accessibility</h1>
+        <p>This section provides an in-depth analysis of food accessibility based on the data visualized in the previous sections
+            Based on the previous maps, we can observe several key patterns regarding food accessibility in the area.
+            The areas that are near downtown Seattle tend to have a higher density of grocery stores, which likely contributes to better food accessibility for residents in these regions.
+            Conversely, the outskirts of the city show a noticeable decrease in grocery store density, indicating potential food deserts where residents may face challenges in accessing fresh and affordable food options.
+            Additionally, the proximity to public transportation routes appears to play a significant role in food accessibility.
+            Areas well-served by public transit tend to have better access to grocery stores, suggesting that transportation infrastructure is a critical factor in ensuring food accessibility for all residents.
+            Overall, this analysis highlights the importance of considering both geographic and infrastructural factors when addressing food accessibility issues in urban areas.
+        </p>
     </div>
 
     <!-- Including the main.js file for JavaScript functionality -->
