added food facility finder map so it can be reached from other pages

--- a/section3.html
+++ b/section3.html
@@ -19,6 +19,7 @@
         <a href="index.html">Overview</a>
         <a href="section2.html">Closest Grocery Map</a>
         <a href="section1.html">SNAP Benefits Map</a>
+        <a href="distSortTemp.html">Nearest Food Facility</a>
 
         <!-- Active link pointing to the section3.html page -->
         <a class="active" href="section3.html">What now?</a>
