--- a/references.html
+++ b/references.html
@@ -18,6 +18,7 @@
         <a href="index.html">Overview</a>
         <a href="section2.html">Closest Grocery Map</a>
         <a href="section1.html">SNAP Benefits Map</a>
+        <a href="distSortTemp.html">Nearest Food Facility</a>
         <a href="section3.html">What now?</a>
         <a class="active" href="references.html">References</a>
 
