--- a/section1.html
+++ b/section1.html
@@ -36,6 +36,7 @@
         <a href="index.html">Overview</a>
         <a href="section2.html">Closest Grocery Map</a>
         <a class="active" a href="section1.html">SNAP Benefits Map</a>
+        <a href="distSortTemp.html">Nearest Food Facility</a>
         <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
 
