--- a/section2.html
+++ b/section2.html
@@ -35,6 +35,7 @@
         <a href="index.html">Overview</a>
         <a class="active" href="section2.html">Closest Grocery Map</a>
         <a href="section1.html">SNAP Benefits Map</a>
+        <a href="distSortTemp.html">Nearest Food Facility</a>
 
         <!-- Active link pointing to the section3.html page -->
         <a href="section3.html">What Now?</a>
