--- a/distSortTemp.html
+++ b/distSortTemp.html
@@ -104,7 +104,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Overview</a>
         <a href="section1.html">SNAP Benefits Map</a>
-        <a class="active" href="distSortTemp.html">Nearest Food Facility</a>
+        <a class="active" a href="distSortTemp.html">Nearest Food Facility</a>
         <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
 
