--- a/distSortTemp.html
+++ b/distSortTemp.html
@@ -38,53 +38,57 @@
         }
         .map-overlay {
             position: absolute;
-            bottom: 0;
-            left: 0;
-            background: rgba(255, 255, 255, 0.8);
-            border-style: solid;
-            border-width: 1px;
-            border-color: rgba(0, 0, 0, 0.2);
-            margin-left: 20px;
-            font-family: Arial, sans-serif;
+            bottom: 24px;
+            left: 24px;
+            max-width: 320px;
+
+            /* Dark, glassy background */
+            background: radial-gradient(circle at top left,
+                        rgba(59, 130, 246, 0.28),
+                        rgba(15, 23, 42, 0.95));
+            border: 1px solid rgba(148, 163, 184, 0.6);
+            border-radius: 16px;
+            padding: 14px 16px;
+
+            /* Slight blur for glass effect (works in modern browsers) */
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+
+            box-shadow: 0 18px 40px rgba(0, 0, 0, 0.55);
+
+            font-family: "Segoe UI", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            color: #e5e7eb;
             overflow: auto;
-            border-radius: 3px;
         }
 
+        /* Positioning of this particular overlay */
         #features {
             top: 0;
             height: 150px;
-            margin-top: 70px;
-            width: 250px;
+            margin-top: 80px; /* leaves space under the navbar */
+            width: 280px;
+        }
+
+        /* Titles inside the overlay */
+        #features h2 {
+            margin: 0 0 6px 0;
+            font-size: 20px;
+            font-weight: 600;
+            letter-spacing: 0.03em;
+            color: #e5e7eb;
+        }
+
+        /* Paragraph inside the overlay */
+        #features p {
+            margin: 4px 0 0 0;
+            font-size: 14px;
+            line-height: 1.6;
+            color: #cbd5f5;
         }
 
         .mapboxgl-canvas-container.mapboxgl-interactive,
         .mapboxgl-ctrl-group button.mapboxgl-ctrl-compass {
             cursor: unset;
-        }
-        .topnav {
-            background-color: #333;
-            overflow: hidden;
-            display: flex;
-        }
-
-        .topnav a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 26px;
-        }
-
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        .topnav .active {
-            background-color: #04AA6D;
-            color: white;
         }
 
         /* Fix map overlapping the navbar */
@@ -104,7 +108,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Overview</a>
         <a href="section1.html">SNAP Benefits Map</a>
-        <a class="active" a href="distSortTemp.html">Nearest Food Facility</a>
+        <a class="active" href="distSortTemp.html">Nearest Food Facility</a>
         <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
 
