analysis section rewrite

--- a/section3.html
+++ b/section3.html
@@ -35,14 +35,22 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 3 content -->
-        <h1>Analysis of Food Accessibility</h1>
-        <p>This section provides an in-depth analysis of food accessibility based on the data visualized in the previous sections
-            Based on the previous maps, we can observe several key patterns regarding food accessibility in the area.
-            The areas that are near downtown Seattle tend to have a higher density of grocery stores, which likely contributes to better food accessibility for residents in these regions.
-            Conversely, the outskirts of the city show a noticeable decrease in grocery store density, indicating potential food deserts where residents may face challenges in accessing fresh and affordable food options.
-            Additionally, the proximity to public transportation routes appears to play a significant role in food accessibility.
-            Areas well-served by public transit tend to have better access to grocery stores, suggesting that transportation infrastructure is a critical factor in ensuring food accessibility for all residents.
-            Overall, this analysis highlights the importance of considering both geographic and infrastructural factors when addressing food accessibility issues in urban areas.
+        <h1>What Now?</h1>
+        <p>By browsing these maps and combining findings, 
+        we can observe several key patterns regarding food accessibility in the area. 
+        Busier commercial areas such as downtown Seattle, for example, tend to have a higher 
+        density of grocery stores, contributing to better food accessibility for residents in 
+        these regions – or those who frequent these spaces, suggesting that transportation 
+        infrastructure is a factor in ensuring food accessibility for all residents. 
+        <br>
+        Conversely, the outskirts of the city show a noticeable decrease in grocery store density, 
+        indicating potential food deserts where residents may face challenges in accessing 
+        fresh and affordable food options. These are also areas usually associated with 
+        less public transportation coverage, adding another layer to food accessibility.
+        <br>
+        Overall, it's important to note both geographic and infrastructural factors when 
+        addressing food accessibility issues in urban areas. Keep an eye out for your community!
+
         </p>
     </div>
 
