favicon and reorg

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Food Access in Washington State</title>
 
     <link rel="stylesheet" href="css/template.css">
-
-
-
+    <link rel="icon" href="assets/favicon.png">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -30,7 +28,7 @@
 
         <h1>Food Access in Washington State</h1>
 
-        <img src="img/foodAccess.jpg" alt="Food Access Overview" style="max-width: 60%; height: auto;" />
+        <img src="assets/img/foodAccess.jpg" alt="Food Access Overview" style="max-width: 60%; height: auto;" />
 
         <p>
 
