--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Food Access in Washington State</title>
 
     <link rel="stylesheet" href="css/template.css">
-    <link rel="icon" href="assets/favicon.png">
+    <link rel="icon" href="assets/img/favicon.png">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
