change file names

--- a/snapMapPage.html
+++ b/snapMapPage.html
@@ -35,7 +35,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Overview</a>
         <a class="active" a href="section1.html">SNAP Benefits Map</a>
-        <a href="distSortTemp.html">Nearest Food Facility</a>
+        <a href="nearestFalicityPage.html">Nearest Food Facility</a>
         <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
 
