--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">Overview</a>
         <a href="section1.html">SNAP Benefits Map</a>
-        <a href="distSortTemp.html">Nearest Food Facility</a>
+        <a href="nearestFalicityPage.html">Nearest Food Facility</a>
         <a href="section3.html">What now?</a>
         <a href="references.html">References</a>
 
