--- a/references.html
+++ b/references.html
@@ -17,7 +17,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Overview</a>
         <a href="section1.html">SNAP Benefits Map</a>
-        <a href="distSortTemp.html">Nearest Food Facility</a>
+        <a href="nearestFalicityPage.html">Nearest Food Facility</a>
         <a href="section3.html">What now?</a>
         <a class="active" href="references.html">References</a>
 
