--- a/section3.html
+++ b/section3.html
@@ -18,7 +18,7 @@
         <!-- Links to different sections -->
         <a href="index.html">Overview</a>
         <a href="section1.html">SNAP Benefits Map</a>
-        <a href="distSortTemp.html">Nearest Food Facility</a>
+        <a href="nearestFalicityPage.html">Nearest Food Facility</a>
 
         <!-- Active link pointing to the section3.html page -->
         <a class="active" href="section3.html">What now?</a>
