changed file names, deleted unused files

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">Overview</a>
-        <a href="section1.html">SNAP Benefits Map</a>
+        <a href="snapMapPage.html">SNAP Benefits Map</a>
         <a href="nearestFalicityPage.html">Nearest Food Facility</a>
-        <a href="section3.html">What now?</a>
+        <a href="whatsNowPage.html">What now?</a>
         <a href="references.html">References</a>
 
         <a href="javascript:void(0);" class="icon">
