--- a/nearestFalicityPage.html
+++ b/nearestFalicityPage.html
@@ -104,9 +104,9 @@
         <!-- Navigation bar -->
     <div class="topnav" id="myTopnav">
         <a href="index.html">Overview</a>
-        <a href="section1.html">SNAP Benefits Map</a>
+        <a href="snapMapPage.html">SNAP Benefits Map</a>
         <a class="active" href="distSortTemp.html">Nearest Food Facility</a>
-        <a href="section3.html">What now?</a>
+        <a href="whatsNowPage.html">What now?</a>
         <a href="references.html">References</a>
 
         <a href="javascript:void(0);" class="icon">
