--- a/references.html
+++ b/references.html
@@ -18,7 +18,7 @@
         <a href="index.html">Overview</a>
         <a href="section1.html">SNAP Benefits Map</a>
         <a href="nearestFalicityPage.html">Nearest Food Facility</a>
-        <a href="section3.html">What now?</a>
+        <a href="whatsNowPage.html">What now?</a>
         <a class="active" href="references.html">References</a>
 
         <a href="javascript:void(0);" class="icon">
