--- a/whatsNowPage.html
+++ b/whatsNowPage.html
@@ -17,11 +17,11 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Overview</a>
-        <a href="section1.html">SNAP Benefits Map</a>
+        <a href="snapMapPage.html">SNAP Benefits Map</a>
         <a href="nearestFalicityPage.html">Nearest Food Facility</a>
 
         <!-- Active link pointing to the section3.html page -->
-        <a class="active" href="section3.html">What now?</a>
+        <a class="active" href="whatsNowPage.html">What now?</a>
 
         <a href="references.html">References</a>
 
