--- a/snapMapPage.html
+++ b/snapMapPage.html
@@ -4,23 +4,23 @@
 <head>
     <title>SNAP Benefits Map</title>
 
-    <!-- Keep your template CSS -->
+
     <link rel="stylesheet" href="css/template.css">
 
-    <!-- Mapbox (needed for the inserted snapMap map) -->
+
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
 
     <style>
-        /* Make embed container follow page layout */
+
         .map-container {
             width: 100%;
-            height: 600px; /* adjust height as you need */
+            height: 600px; 
             margin-top: 20px;
             border: 1px solid #ccc;
         }
 
-        /* Description part */
+
         .description-box {
             margin-top: 20px;
             font-size: 16px;
